--- a/betti-weblap-dev/style.css
+++ b/betti-weblap-dev/style.css
@@ -2,15 +2,23 @@ body {
     background-color:aquamarine;
 }
 
-.box {
-    margin: 0px;
-    padding: 0;
-    background-color: beige;
+* {
+    box-sizing: border-box;
 }
 
-.content {
+#box {
+    background-color: aquamarine;
+    padding: 10px 30px 10px 30px;
+    border: 10px solid black;
+    width: 200px;
+    margin-top: 20px;
+    height: 100px;
+    overflow: auto;
+}
 
-
+#content {
+    background-color: aqua;
+    text-align: center;
 }
 
 header li {
