--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -14,9 +14,9 @@ div {
 }
 
 .container {
-    height: fit-content;
-    background-color: antiquewhite;
+    background-color: aliceblue;
     border: 1px solid black;
+    height: fit-content;
 }
 
 .title {
@@ -27,6 +27,16 @@ div {
     padding-bottom: 45px;
 }
 
+p {
+    border: 0;
+    color: black;
+    width: 80%;
+    height: fit-content;
+    margin-right: auto;
+    margin-left: auto;
+    font-size: medium;
+}
+
 .row {
     width: 100%;
     padding: 10px;
@@ -34,6 +44,7 @@ div {
 
 @media (min-width: 992px) {
     .col-lg-4 {
+        height: fit-content;
         float: left;
         border: 1px solid black;
         background-color: aliceblue;
@@ -46,6 +57,7 @@ div {
 
 @media (min-width: 768px) and (max-width: 991px) {
     .col-md-6 {
+        height: fit-content;
         float: left;
         border: 1px solid black;
         background-color: aliceblue;
@@ -53,6 +65,19 @@ div {
     }
     .col-md-6 {
         width: 50%;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .col-md-12 {
+        height: fit-content;
+        float: left;
+        border: 1px solid black;
+        background-color: aliceblue;
+        position: relative;
+    }
+    .col-md-12 {
+        width: 100%;
     }
 }
 
