--- a/betti-bootstrap/css/style.css
+++ b/betti-bootstrap/css/style.css
@@ -56,23 +56,55 @@ a:hover, a:active {
 
 .row {
     position: relative;
+    width: 100%;
 }
-
 
 .container {
     background-color: antiquewhite;
     border: 1px solid black;
     height: fit-content;
+    padding: 10;
+    margin: 10;
 }
 
-.title {
-    font-size: 15px;
-    font-style: normal;
-    text-transform: capitalize;
+@media (min-width: 992px) {
+    .col-lg-4 {
+        margin: 10px;
+        height: fit-content;
+        float: left;
+        border: 1px solid black;
+        background-color: antiquewhite;
+        position: relative;
+    }
+    .col-lg-4 {
+        width: 33.3%;
+    }
 }
 
-.content {
-    font-size: 8px;
-    font-style: normal;
+@media (min-width: 768px) and (max-width: 991px) {
+    .col-md-6 {
+        padding: 10;
+        height: fit-content;
+        float: left;
+        border: 1px solid black;
+        background-color: antiquewhite;
+        position: relative;
+    }
+    .col-md-6 {
+        width: 50%;
+    }
+}
+
+.boxtitle {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100px;
+    height: fit-content;
+    background-color: antiquewhite;
+    border: 1px solid black;
+    margin: 0;
+    font-size: 125%;
+    font-style: italic;
     text-align: center;
 }
